# giotto-deep

./: .gitignore  .pre-commit-config.yaml  CODE_AUTHORS.rst  CODE_OWNERS.rst  GOVERNANCE.rst  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  dump.rdb  index.html  local_test.bh  mypy.ini  paper.bib  paper.md  requirements.txt  setup.cfg  setup.py  tmp_datasets (1).json
benchmark/: .gitignore  Dockerfile  README.md  benchmark.py  generate_pods.py  genpods.py  pod-template-plot.yml  pod-template-run.yml
benchmark_pipeline_tool/: benchmark.py  exec_time.txt  memory_alloc.sh  memory_alloc.txt  utils.py
doc/: .nojekyll
examples/: Autoencoder_MNIST.ipynb  Bubenik_reproduction.ipynb  CaltechResnet.py  CaltechResnet_dp.py  CaltechResnet_giotto.py  DB_Mfd_with_corners.ipynb  DB_explorer.ipynb  DB_generic_cnn.ipynb  Decision_Boundary_Calculator.ipynb  Ensemble_learning.ipynb  Generate_DB_mesh.ipynb  Heatmap.ipynb  Heatmap.nbconvert.ipynb  Hessian.ipynb  Intersection_Homology.ipynb  MNIST_Decision_Boundray.ipynb  MNIST_SAMPLE_Decision_Boundary.ipynb  QA_Text_refactoring.py  Reproduct_results_20_mai_2021.ipynb  Set_transformer_benchmark_orbit5k_persistence.py  Set_transformer_gridsearch_orbit_5k_orbits.py  Tutorial_torch_pers.ipynb  Untitled.ipynb  analysis_training.py  basic_image_rec.py  basic_tutorial_BERT.ipynb  basic_tutorial_QandA.ipynb  basic_tutorial_benchmarking - Copy.ipynb  basic_tutorial_benchmarking+gridsearch.ipynb  basic_tutorial_benchmarking.ipynb  basic_tutorial_dataset_cloud.ipynb  basic_tutorial_dataset_cloud.py  basic_tutorial_ensemble_learning.ipynb  basic_tutorial_gridsearch.ipynb  basic_tutorial_gridsearch_benchmarking.ipynb  basic_tutorial_gridsearch_benchmarking.py  basic_tutorial_hpo_and_benchmarking.ipynb  basic_tutorial_image.ipynb  basic_tutorial_persformer_benchmark.ipynb  basic_tutorial_persformer_benchmark.py  (+104 more)
gdeep/: __init__.py  _version.py  sample_nn.py
kubernetes/: gdeep-lab-1.yaml  gdeep-lab.yaml  infra.tf  lab-ingress.yaml  mysql-secret.yaml  mysql.yaml  readme.md  (+9 more)
(+517 files in other folders)
