[metadata]
description-file = README.md

[tool:pytest]
junit_family=xunit1

addopts =
    --ignore examples

    -ra
; Logging within pytest
log_cli = 1
log_cli_level = INFO

[flake8]
exclude =
    giotto-deep,
    examples

max-complexity=10
max-line-length=127
select=E9,F63,F7,F82


[mypy]
python_version = 3.8
warn_redundant_import = True
warn_return_any = True
warn_unused_configs = True
#strict_optional = True  # This might be useful to ensure that None is not used as a value

[mypy-gdeep.data.*]
disallow_untyped_defs = True  # This might be too strict

[mypy-plotly.*]
ignore_missing_imports = True

[mypy-gtda.*]
ignore_missing_imports = True

[mypy-torch.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True


[mypy-mysql.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-torch_xla.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-html2image.*]
ignore_missing_imports = True

[mypy-torchvision.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[mypy-PIL.*]
ignore_missing_imports = True

[mypy-sympy.*]
ignore_missing_imports = True

[mypy-torchtext.*]
ignore_missing_imports = True

[mypy-networkx.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-sphinx_rtd_theme.*]
ignore_missing_imports = True

[mypy-torchdiffeq.*]
ignore_missing_imports = True

[mypy-captum.*]
ignore_missing_imports = True
