[metadata]
description-file = README.md

[tool:pytest]
junit_family=xunit1

addopts =
    --ignore examples

    -ra
; Logging within pytest
log_cli = 1
log_cli_level = INFO

[flake8]
exclude =
    giotto-deep,
    examples

max-complexity=10
max-line-length=127
select=E9,F63,F7,F82


[mypy]
python_version = 3.8
exclude = giotto-deep
warn_unused_configs = True
